# FTDSS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  api-docs-ford-settings.md  api-docs-index.md  index.html  search.html
.devcontainer/: Dockerfile  devcontainer.json
.github/.workflows/: documentation.yml
.github/workflows/: documentation.yml
Inout/new-toml/: Basic.json  Basic.toml  Conditions.json
Inout/new-toml/Input/: Basic.json  Conditions.json
Inout/new/Input/: BC.in  BCtype.in  Basic.in  IC.in  coordinate.in  top.in
Inout/prj1/Input/: BCtype.in  Basic.in  IC.in  Obs.in  coordinate.in  printobs.in
Inout/prj10/Input/: BC.in  Basic.in  Obs.in  coordinate.in  top.in
Inout/prj11/Input/: BC.in  Basic.in  Obs.in  coordinate.in  top.in
Inout/prj2/Input/: BC.in  BCtype.in  Basic.in  Obs.in  coordinate.in  top.in
Inout/prj3/Input/: BC.in  BCtype.in  Basic.in  IC.in  Obs.in  top.in
Inout/prj4/Input/: BC.in  Basic.in  coordinate.in  printobs.in  top.in
Scripts/: Compile-Cmake-test.sh  plotAll.plt  plotFlux.plt  plotP.plt  plotSi.plt  plotT.plt
app/: test.f90  ysy_fc.f90
docs/: README.md
interface/: allocate_matrix.html  allocate_pointer.html  allocate_vector.html  calc_area.html  calc_shape.html  calculate_gcc_nonsegregation.html  calculate_gcc_nonsegregation_derivative.html  calculate_gcc_segregation_interface.html  calculation_hcf.html  calculation_hcf_mu.html  count_if.html  dls.html  has_nan.html  hcf.html  heat.html  ils.html  output.html  set_obs_coo.html  set_point.html  value_in_range.html
lis/include/: lis_config.h
lis/lib/: liblis.la
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: allocate.html  allocate_structure.html  calculate_area.html  calculate_blas.html  calculate_count.html  calculate_gcc.html  calculate_hcf.html  calculate_latentheat.html  calculate_observation.html  calculate_points.html  calculate_product.html  calculate_shape.html  calculate_trm.html  calculate_update.html  calculate_wrf.html  condition_fixboundarycondition.html  condition_fixinitialcondition.html  error.html  inout_output.html  inout_setprojectpath.html  inout_stdout.html  main_heat.html  matrix_assemble.html  matrix_convertcrs.html  matrix_findind.html  rootfinding_binaryfinding.html  rootfinding_secantmethod.html  solver_initcopy.html  solver_initialize.html  solver_precon_jacobi.html  solver_solve.html  types.html
page/: index.html  lisence.html
proc/: allocate_bcinfo.html  allocate_df.html  allocate_dp2d.html  allocate_int2d.html  allocate_solver.html  allocate_structure_hcf_type.html  allocate_structure_hydraulic_type.html  allocate_structure_ice_type.html  allocate_structure_thermal_type.html  allocate_structure_wrf_type.html  apply_precond_jacobi.html  assemble_gm_heat.html  assemble_gm_heat_ic.html  assemble_gm_water.html  assemble_gm_water_ic.html  binary_finding.html  calc_area_31.html  calc_ca_gcc.html  calc_gm_diffusion.html  calc_gm_diffusion_advection.html  calc_gm_diffusion_advection_trm.html  calc_gm_diffusion_advection_trm_f.html  calc_gm_diffusion_richards.html  calc_gm_diffusion_richards_f.html  calc_gm_diffusion_trm.html  calc_gm_time_divide.html  calc_gm_time_richards.html  calc_gm_time_trm.html  calc_gm_time_trm_f.html  calc_hcf_mu_exponential.html  calc_hcf_mu_exponential_supercooled.html  calc_latentheatterm.html  calc_shape_31.html  calculate_gcc_nonsegregation_derivative_kpa.html  calculate_gcc_nonsegregation_derivative_m.html  calculate_gcc_nonsegregation_kpa.html  calculate_gcc_nonsegregation_m.html  calculate_gcc_segregation_derivative_kpa.html  calculate_gcc_segregation_derivative_m.html  calculate_gcc_segregation_kpa.html  (+100 more)
sourcefile/: allocate.f90.html  allocate_structure.f90.html  area.f90.html  assemble.f90.html  binaryfinding.f90.html  blas.f90.html  convertcrs.f90.html  count.f90.html  error.f90.html  findind.f90.html  fixboundarycondition.f90.html  fixinitialcondition.f90.html  gcc.f90.html  hcf.f90.html  heat.f90.html  initcopy.f90.html  initialize.f90.html  latentheat.f90.html  observation.f90.html  output.f90.html  points.f90.html  precon_jacobi.f90.html  product.f90.html  secantmethod.f90.html  setprojectpath.f90.html  shape.f90.html  solve.f90.html  stdout.f90.html  trm.f90.html  types.f90.html  update.f90.html  wrf.f90.html
src/: Allocate_Structure.f90  Assemble.f90  ConvertCRS.f90  Count.f90  GCC.f90  InitCopy.f90  Initialize.f90  LatentHeat.f90  Observation.f90  Output.f90  Points.f90  TRM.f90  Types.f90  Update.f90
src/Allocate/: Allocate.f90  Allocate_Structure.f90
src/Calculate/: Area.f90  BLAS.f90  Count.f90  GCC.f90  HCF.f90  Ice.F90  Ice_EXP.F90  Ice_GCC.F90  Ice_TRM.F90  LatentHeat.f90  Observation.f90  Points.f90  Product.f90  Shape.f90  TRM.f90  Unique.f90  Update.f90  VHC.F90  WRF.f90
src/Conditions/: FixBoundaryCondition.f90  FixInitialCondition.f90
src/Inout/: Input.f90  Output.f90  SetProjectPath.f90  Stdout.f90  VTK.f90
src/Main/: Heat.f90  Solver.f90  Water.f90
src/Matrix/: Assemble.f90  ConvertCRS.f90  FindInd.f90
src/RootFinding/: BinaryFinding.f90  SecantMethod.f90
src/Solver/: Initialize.f90  Precon_jacobi.f90  Solve.f90  error.f90
src/Type/: Types.f90
src/archive/: Inout.f90
test/: test.f90  test_GCC.F90  test_HCF.F90  test_Ice.F90  test_WRF.F90
tipuesearch/: tipuesearch_content.js
type/: base_density.html  base_hcf.html  base_hydraulic.html  base_ice.html  base_impedance.html  base_ktdynamics.html  base_solver.html  base_specificheat.html  base_thermalconductivity.html  base_wrf.html  basic_params.html  boudary_condition.html  boudary_condition_dirichlet.html  boudary_condition_neumann.html  boudarycondition.html  boudaryconditioninfo.html  crs.html  df.html  dls.html  dp2d.html  dp3d.html  flag.html  gccmodel.html  geometry2d.html  geometry_2d.html  hcf.html  hcf_parameters.html  heat.html  heatconstants.html  heatfields.html  heatvariables.html  ils.html  initialcondition.html  initialconditioninfo.html  int2d.html  int3d.html  iteration.html  latentheattreatment.html  lis.html  mpiinfo.html  (+49 more)
(+200 files in other folders)
